--- a/AnalistaDeDados/ModuloARJ/PrimeirosPassosR.ipynb
+++ b/AnalistaDeDados/ModuloARJ/PrimeirosPassosR.ipynb
@@ -16,21 +16,23 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "l3MH6Kg-nISB"
+      },
+      "source": [
+        "# **Aquecimento e Regras do Jogo**\n",
+        "## **Bootcamp Analista de Dados**\n",
+        "**Professora**: Fernanda Farinelli"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "zERjtj9dnfxL"
       },
       "source": [
         "**Comandos básicos**\n",
         "\n",
         "O uso do R como calculadora"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "l3MH6Kg-nISB"
-      },
-      "source": [
-        "FErnanda"
       ]
     },
     {
